--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/node": "^22.12.0",
     "babel-jest": "^30.0.4",
     "eslint": "^9.18.0",
+    "fast-xml-parser": "^5.3.0",
     "ink-testing-library": "^4.0.0",
     "jest": "^30.0.4",
     "jest-mock-fs": "^1.0.2",
